--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://wadush.github.io/wadush/.",
+  "homepage": "https://wadush.github.io/",
   "name": "wadush",
   "version": "0.1.0",
   "private": true,
